--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -16,14 +16,13 @@ body {
 	width: 100%;
 	margin: auto;
 	position: relative;
-	background-image: url(../images/background.png);
 	background-size: 100% 100%;
 	border: 3px solid black;
 }
 
 .portrait {
 	border: 3px black solid;
-	border-radius: 130px;
+	border-radius: 50%;
 	margin: 190px;
 }
 
