--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,9 +36,11 @@ a:hover {
   width: 100%;
   position: fixed;
   padding: 10px 20px;
+  z-index: 1;
 }
 
 .portfolio-logo {
+  background-color: white;
   background-size: cover;
   height: 100px;
   width: 100px;
@@ -63,10 +65,12 @@ a:hover {
 
 .header-spacer {
   height: 120px;
+  position: relative;
 }
 
 .content {
-  padding: 40px;
+  padding: 30px;
+  justify-content: center;
 }
 
 .card {
@@ -108,6 +112,23 @@ a:hover {
 
 .link {
   margin-left: auto;
+}
+
+.icon-container {
+  height: 50px;
+  position: absolute;
+  top: 65px;
+  left: 140px;
+}
+
+.icon-container a {
+  font-size: 34px;
+  margin-right: 15px;
+  color: #555;
+  background-color: #fff;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  padding: 5px;
+  border-radius: 5px;
 }
 
 @media only screen and (max-width: 1000px) {
