--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,16 @@
+:root {
+  --space: 16px;
+}
+
 body {
-  background-color: #fafafa;
+  background-color: #ffe48c;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   margin: 0;
+  font-size: 16px;
+  color: #2e2e2e;
+  font-family: 'Roboto', sans-serif;
 }
 
 div {
@@ -14,18 +24,12 @@ span {
 a {
   text-decoration: none;
   font-size: 18px;
+  color: revert;
   cursor: pointer;
-  color: #8087c9;
 }
 
 a:hover {
   text-decoration: none;
-  color: #aaa;
-}
-
-* {
-  color: #555;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .checkbox-label {
@@ -33,112 +37,41 @@ a:hover {
 }
 
 .header {
-  width: 100%;
-  position: fixed;
-  padding: 10px 20px;
-  z-index: 1;
-}
-
-.portfolio-logo {
-  background-color: white;
-  background-size: cover;
-  height: 100px;
-  width: 100px;
-  border-radius: 50%;
-  position: absolute;
-  z-index: 2;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-}
-
-.header-name {
-  font-size: 32px;
-  background-color: #fff;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  position: absolute;
-  top: 10px;
-  left: 70px;
-  z-index: 1;
-  width: auto;
-  padding: 0px 10px 5px 60px;
-  border-radius: 0 5px 5px;
-}
-
-.header-spacer {
-  height: 120px;
-  position: relative;
-}
-
-.content {
-  padding: 30px;
-  justify-content: center;
-}
-
-.card {
-  min-height: 200px;
-  max-width: 900px;
-  background-color: #fff;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  font-size: 18px;
-  margin-bottom: 20px;
   display: flex;
-  flex-wrap: wrap;
-}
-
-.card-image {
-  height: 200px;
-  width: 350px;
-  flex: 0 1 auto;
-}
-
-.card-content {
-  padding: 15px;
-  height: 200px;
-  flex: 1 1 auto;
-  word-wrap: break-word;
-  max-width: 550px;
-  display: flex;
-  flex-direction: column;
-}
-
-.card-description {
-  flex: 1 0 auto;
-}
-
-.card-header {
-  font-size: 24px;
-  font-weight: 400;
-  margin-bottom:10px;
-}
-
-.link {
-  margin-left: auto;
 }
 
 .icon-container {
   height: 50px;
-  position: absolute;
-  top: 65px;
-  left: 140px;
 }
 
 .icon-container a {
-  font-size: 34px;
-  margin-right: 15px;
-  color: #555;
-  background-color: #fff;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  padding: 5px;
-  border-radius: 5px;
+  margin-right: var(--space);
 }
 
-@media only screen and (max-width: 1000px) {
-  .content {
-    display: flex;
-    flex-wrap: wrap;
-  }
+.box-thing {
+  background-color: #ffffff1c;
+  border: 1px solid #242222;
+  padding: 0 var(--space);
+  max-width: 800px;
+}
 
-  .card {
-    margin-right: 20px;
-    max-width: 350px;
-  }
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 0;
+}
+
+.text {
+  margin-bottom: var(--space);
+}
+
+.multi {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 300px;
+}
+
+.final-thought {
+  max-width: 300px;
 }
