make the home page color not "look like pee" according to malindi

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@
 
 body {
   background: url("../background-textures/Elements_03-256x256.png");
-  background-color: #ffe48c;
+  background-color: #d6d4cd;
   background-blend-mode: overlay;
 
 }
