revert homepage because malindi says she liked it better

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,8 +3,7 @@
 }
 
 body {
-  background: url("../background-textures/Elements_03-256x256.png");
-  background-color: #d6d4cd;
+  background-color: #ffe48c;
   background-blend-mode: overlay;
 
 }
