--- a/styles/styles.css
+++ b/styles/styles.css
@@ -120,6 +120,10 @@ h2 {
   grid-area: left;
 }
 
+.left-side img {
+  box-shadow: inset 0px 1px 20px 9px #9200ff;
+}
+
 .right-side {
   overflow: auto;
   grid-area: right;
